// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Toggle rendering renders expected elements 1`] = `
<div
  className="Toggle"
>
  <button
    aria-checked={true}
    aria-label="Test"
    className="Toggle__btn TestClass"
    id="test"
    onClick={[MockFunction]}
    role="switch"
    type="button"
  />
  <span
    className="Toggle__sideLabel"
  >
    getSideLabel
  </span>
</div>
`;

exports[`Toggle rendering renders expected elements when className is not set 1`] = `
<div
  className="Toggle"
>
  <button
    aria-checked={true}
    aria-label="Test"
    className="Toggle__btn"
    id="test"
    onClick={[MockFunction]}
    role="switch"
    type="button"
  />
  <span
    className="Toggle__sideLabel"
  >
    getSideLabel
  </span>
</div>
`;

exports[`Toggle rendering renders expected elements when disabled is true 1`] = `
<div
  className="Toggle"
>
  <button
    aria-checked={true}
    aria-label="Test"
    className="Toggle__btn TestClass"
    disabled={true}
    id="test"
    onClick={[MockFunction]}
    role="switch"
    type="button"
  />
  <span
    className="Toggle__sideLabel"
  >
    getSideLabel
  </span>
</div>
`;
